--- a/style.css
+++ b/style.css
@@ -140,6 +140,7 @@ html {
 }
 h1, h2, h3, h4, h5 {
   font-weight: 700;
+  color: #fb6347;
 }
 img {
   width: 100%;
@@ -473,7 +474,7 @@ p.btn-arrow {
   justify-content: center;
   margin: 0;
   position: absolute;
-  right: 44rem;
+  right: 3rem;
   top: 4.1rem;
   z-index: 0;
   pointer-events: none;
@@ -1724,7 +1725,17 @@ _::-webkit-full-page-media, _:future, :root .tab-lst a {
 .p-section__index h2 {
   font-size: 7rem;
   color: #FB6347;
+  margin: 15rem 0 1rem 0;
 }
+
+@media screen and (max-width: 569px) {
+.p-section__index h2 {
+    font-size: 7rem;
+    color: #FB6347;
+    margin: 4rem 0 1rem 0;
+}
+}
+
 .p-section__index h2 span {
   position: relative;
 }
@@ -1769,7 +1780,6 @@ _::-webkit-full-page-media, _:future, :root .tab-lst a {
   width: 100%;
   position: relative;
   overflow: hidden;
-  padding: 13rem 0 10rem;
 }
 .p-top-profile__body {
   width: 100%;
@@ -1779,7 +1789,7 @@ _::-webkit-full-page-media, _:future, :root .tab-lst a {
 .profile-wrap {
   width: calc(100% - 16rem);
   max-width: 116rem;
-  margin: 6rem auto 0;
+  margin: 2rem auto 0;
   position: relative;
 }
 .profile-note {
@@ -1853,7 +1863,6 @@ _::-webkit-full-page-media, _:future, :root .tab-lst a {
   height: 100%;
   -webkit-background-size: cover;
   background-size: cover;
-  background-position: 50% 50%;
 }
 .profile-img {
   width: 100%;
@@ -1928,11 +1937,11 @@ _::-webkit-full-page-media, _:future, :root .tab-lst a {
 .illust-request {
   width: calc(100% - 16rem);
   max-width: 116rem;
-  margin: 2rem auto 0;
+  margin: 0.5rem auto 0;
   position: relative;
   background-color: #FB6347;
   border-radius: 1rem;
-  padding: 5rem 2rem;
+  padding: 2rem 2rem;
 }
 .illust-request:before {
   background-image: url(../img/common/request-cover.png);
@@ -2058,8 +2067,7 @@ _::-webkit-full-page-media, _:future, :root .tab-lst a {
   width: 19.4rem;
 }
 .request-read {
-  width: 50rem;
-  padding-top: 5rem;
+
 }
 .request-read__inner {
   position: relative;
@@ -2146,7 +2154,7 @@ _::-webkit-full-page-media, _:future, :root .tab-lst a {
   top: -5.2%;
 }
 .info-details {
-  width: 78rem;
+  width: 100%;
   margin: 5rem auto 0;
   position: relative;
   z-index: 3;
@@ -2154,12 +2162,17 @@ _::-webkit-full-page-media, _:future, :root .tab-lst a {
 .info-details__inner {
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 .info-text {
   width: 100%;
-  padding: 1rem 0 0;
+  padding: 0 0 3rem 0;
 }
+
+.info-text2 {
+  width: 100%;
+}
+
 .info-text h3 {
   font-size: 2.8rem;
 }
@@ -2167,7 +2180,7 @@ _::-webkit-full-page-media, _:future, :root .tab-lst a {
   font-size: 1.8rem;
   color: #231815;
   font-weight: 700;
-  margin: 1.6rem 0 0;
+  margin: 0.5rem 0 0;
   line-height: 1.5;
 }
 .info-publisher {
@@ -2176,8 +2189,8 @@ _::-webkit-full-page-media, _:future, :root .tab-lst a {
   margin: 1.5rem 0 0;
 }
 .cv-wrap {
-  margin: 4rem 0 0;
-  width: 60rem;
+  margin: 1rem 0 0;
+  width: 55rem;
 }
 .cv-wrap.p-center {
   margin: 4rem auto 0;
@@ -2206,7 +2219,7 @@ _::-webkit-full-page-media, _:future, :root .tab-lst a {
   fill: #247ee8;
 }
 .info-img {
-  width: calc(100% - 50%);
+  width: calc(100% - 30%);
 }
 .info-img span {
   padding: 72% 0;
@@ -2216,7 +2229,7 @@ _::-webkit-full-page-media, _:future, :root .tab-lst a {
 }
 .info-sample {
   width: 100%;
-  margin: 7.5rem auto 0;
+  margin: 2rem auto 0;
   position: relative;
   z-index: 3;
 }
@@ -2234,12 +2247,12 @@ _::-webkit-full-page-media, _:future, :root .tab-lst a {
 .info-sample__inner {
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   flex-wrap: wrap;
-  margin: 5rem auto 0;
+  margin: 2rem auto 0;
 }
 .sample-img {
-  width: 47%;
+  width: 80%;
   margin-bottom: 4rem;
 }
 .sample-img span {
@@ -2946,7 +2959,7 @@ _::-webkit-full-page-media, _:future, :root .tab-lst a {
   .request-read {
     width: calc(100% - 20rem);
     padding-top: 0;
-    margin: 2.5rem auto 0;
+    margin: 2rem auto 0;
   }
   .request-read__inner {
     display: flex;
@@ -2987,7 +3000,7 @@ _::-webkit-full-page-media, _:future, :root .tab-lst a {
   }
   .info-text {
     width: 45%;
-    padding: 2.7rem 0 0;
+    padding: 1rem 0 0;
   }
   .info-text h3 {
     font-size: 2.5rem;
@@ -3261,7 +3274,7 @@ _::-webkit-full-page-media, _:future, :root .tab-lst a {
   }
   /* p-top-profile ============================================== */
   .p-top-profile {
-    padding: 3rem 0 4rem;
+    padding: 1rem 0 1rem;
   }
   .profile-wrap {
     width: calc(100% - 4rem);
@@ -3338,7 +3351,7 @@ _::-webkit-full-page-media, _:future, :root .tab-lst a {
   .illust-request {
     padding: 4rem 1rem 4rem;
     width: calc(100% - 4rem);
-    margin: 6.5rem auto 0;
+    margin: 2rem auto 0;
   }
   .request-label {
     font-size: 1.2rem;
@@ -3442,7 +3455,7 @@ _::-webkit-full-page-media, _:future, :root .tab-lst a {
     border: solid 1px #FB6347;
   }
   .info-sample__inner {
-    margin: 2.5rem auto 0;
+    margin: 2rem auto 0;
     display: block;
   }
   .sample-img {
