--- a/style.css
+++ b/style.css
@@ -1072,6 +1072,7 @@ p.btn-arrow span svg {
   position: absolute;
   right: 1.6rem;
   top: 45%;
+  position: fixed;
 }
 .l-main__tab-inner {
   background-color: #FFF;
